--- a/config.json
+++ b/config.json
@@ -1,12 +1,11 @@
 { "ociVersion": "0.1.0",
-  "root": { "path": "rootfs", "readonly": true },
+  "root": { "path": "rootfs", "readonly": false },
   "mounts": [ { "source": "none", "destination": "/proc", "type": "proc" },
               { "source": "none", "destination": "/tmp", "type": "tmpfs" } ], 
-  "process": { "cwd": "/", "args": [ "/entry" ], "capabilities": { "permitted": [] }, "noNewPrivileges": true },
+  "process": { "cwd": "/", "args": [ "/entry_multi0" ] /*, "capabilities": { "permitted": [] }, "noNewPrivileges": true */ },
   "user": { "uid": 12345, "gid": 12345 },
   "linux": { "namespaces": [ { "type": "pid" },
   									  { "type": "ipc" },
 									  { "type": "user" },
 									  { "type": "mount" },
-									  { "type": "uts" },
-									  { "type": "network" } ] } }
+									  { "type": "uts" } ] } }
