--- a/config.json
+++ b/config.json
@@ -1,9 +1,10 @@
 { "ociVersion": "0.1.0",
   "root": { "path": "rootfs", "readonly": false },
   "mounts": [ { "source": "none", "destination": "/proc", "type": "proc" },
-              { "source": "none", "destination": "/tmp", "type": "tmpfs" } ], 
-  "process": { "cwd": "/", "args": [ "/entry_multi0" ] /*, "capabilities": { "permitted": [] }, "noNewPrivileges": true */ },
-  "user": { "uid": 12345, "gid": 12345 },
+  				  { "source": "none", "destination": "/dev/pts", "type": "devpts" },
+              { "source": "none", "destination": "/tmp", "type": "tmpfs" } ],
+  "process": { "cwd": "/", "args": [ "/bin/ttyd", "/bin/sh" ], "noNewPrivileges":false },
+  "user": { "uid": 1000, "gid": 1000 },
   "linux": { "namespaces": [ { "type": "pid" },
   									  { "type": "ipc" },
 									  { "type": "user" },
