--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,13 @@
 CFLAGS=-O3 -Wall -std=c99 -D_GNU_SOURCE
 LDFLAGS=-s
+ifdef SSL
+CFLAGS+=-DTLS -DINET6
+LDLIBS=-lcrypto -lssl
+endif
 BINS=dropcap-simple dropcap-inner dropcap-outer httpget relayttpd cleanfiles
 all: $(BINS)
 clean:
-	rm $(BINS)
+	rm -f $(BINS)
 install: $(BINS)
 	cp -a $(BINS) $(DESTDIR)/bin
 .PHONY: all clean install
