--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,11 @@
 CFLAGS=-O3 -Wall -std=c99 -D_GNU_SOURCE
 LDFLAGS=-s
-ifdef SSL
-CFLAGS+=-DTLS -DINET6
-LDLIBS=-lcrypto -lssl
-endif
-BINS=dropcap-simple dropcap-inner dropcap-outer httpget relayttpd cleanfiles
+BINS=dropcap-simple dropcap-inner dropcap-outer httpget relayttpd cleanfiles relayttpdssl
 all: $(BINS)
 clean:
 	rm -f $(BINS)
 install: $(BINS)
 	cp -a $(BINS) $(DESTDIR)/bin
+relayttpdssl: relayttpd.c
+	$(CC) -o $@ $(CFLAGS) -DINET6 -DTLS $(LDFLAGS) $< $(LDLIBS) -lcrypto -lssl
 .PHONY: all clean install
